 * src/msgwindow.h, src/dialogs.h, src/main.h:
   Add G_GNUC_PRINTF checks for variable argument function prototypes.
 * src/build.c, src/utils.c, src/highlighting.c, src/geany.h,
   src/callbacks.c, src/sci_cb.c, src/vte.c, src/search.c, src/main.h:
   Move geany_debug prototype to geany.h so that all files can use it
   without a dependency on main.h.


2006-10-20  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/interface.c, src/main.c, geany.glade:
   Add drop-down recent files menu to Open toolbar button.
   Align quit toolbar button on the right.
   Move Colour Chooser, Word Count to Tools menu.
   Reorder Format, add Indent icons, edit Remove Indicators items.


2006-10-19  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/build.c, src/about.c, src/dialogs.c:
   Added 6pt border, changed padding for all dialogs in dialogs.c;
   also allow ESC to close cancellable dialogs.
   Updated unsaved, LaTeX Set Arguments dialogs.


2006-10-18  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/utils.c, src/treeviews.c, tagmanager/c.c:
   Use "::" as context separator only for C++, otherwise use ".".
   Detect module declarations in D and put them in the symbol list.
 * src/callbacks.c, src/geany.h, src/msgwindow.c, src/treeviews.c:
   Use enum values to reference different treeview widgets
   (code cleanup).


2006-10-18  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/build.c, src/build.h, src/ui_utils.h, src/ui_utils.c,
   src/keybindings.c, src/callbacks.c, src/callbacks.h, src/document.c,
   src/main.c:
   Move build menu related functions and callbacks to build.c.
   Renamed ui_update_build_menu -> build_menu_update.


2006-10-17  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/callbacks.c, src/filetypes.h, src/ui_utils.c:
   Disable Make All, Make Custom menu items for unnamed files.
   Allow Run and Make Object for C header files.
 * src/document.c:
   Fixed Undo/Redo setting the wrong document changed state when making